--- a/data/style/photo.css
+++ b/data/style/photo.css
@@ -30,9 +30,13 @@ FlowerWindowDialogDirectoryRow {
 }
 
 GtkFlowBox .grid-child {
-  padding: 0px;
-  border-radius: 0px; 
+    padding: 0px;
+    border-radius: 0px;
 }
 GtkFlowBox .grid-child:selected {
-    outline-offset: 0px; 
+    outline-offset: 0px;
 }
+
+/*GtkFlowBox .grid-child:hover {
+    padding-right: 10px;
+}*/
